--- a/css/solutions.css
+++ b/css/solutions.css
@@ -143,7 +143,7 @@ body {
  
 /* Fix 4: Evidenziare il secondo piano allenamento */
 .workout-plan:nth-of-type(2) {
-    border-left: 2px solid #ff9b17;
+    border-left: 3px solid #ff9b17;
     background-color: rgb(245, 245, 178);
 }
 
@@ -165,6 +165,20 @@ body {
 .exercise-reps {
 	color: #666;
 	font-size: 0.9rem;
+}
+
+/* Fix 5: Bordi verdi per primo e ultimo esercizio */
+.exercise-item:first-of-type,
+.exercise-item:last-of-type {
+    border-left: 3px solid green;
+}
+
+/* Fix 6: Icona fulmine negli esercizi pari */
+.exercise-item:nth-of-type(even) .exercise-name::before {
+    content: '⚡';
+    display: inline-block;
+    font-size: 10px;
+    padding-right: 5px;
 }
 
 /* Goals Section */
