--- a/css/solutions.css
+++ b/css/solutions.css
@@ -222,13 +222,20 @@ body {
 	margin-top: 15px;
 }
 
+input:focus,
+select:focus {
+    border: 2px solid rgb(8, 8, 148);
+    box-shadow: 0 2px 10px rgb(8, 8, 148);
+    transition: border 0.3s linear, box-shadow 0.3s linear;
+}
+
 /* Progress Bar */
 .progress-section {
 	background: white;
 	margin: 20px;
 	padding: 25px;
 	border-radius: 12px;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .progress-bar {
