--- a/css/solutions.css
+++ b/css/solutions.css
@@ -45,9 +45,11 @@ body {
 	text-align: center;
 }
 
-.stats-grid:hover {}
-    /* Effetto sollevamento e ombra da inserire
-
+.stats-grid:hover {
+    translate: 0 -5px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    transition: translate 0.5s ease-in, box-shadow 0.5s ease-in;
+}
 
 /* Fix 1: Icona fuoco nella prima stat card */
 .stats-grid:first-child span::before {
@@ -58,11 +60,11 @@ body {
 
 /* Fix 2: evidenziare la terza stat card */
 .stats-grid:last-child {
-    background-image: linear-gradient(to bottom, 
-    #1624BA, #790FA3);
+    background: linear-gradient(280deg, #667eea 0%, #764ba2 100%);
 }
 
-.stats-grid:last-child .stat-label {
+.stats-grid:last-child .stat-label,
+.stats-grid:last-child .stat-number {
     color: white;
 }
 
@@ -222,18 +224,19 @@ body {
 	margin-top: 15px;
 }
 
-/* Fix 9(IN PROGRESS): Miglioramenti al button */
+/* Fix 9: Miglioramenti al button */
 .save-btn:hover {
+    translate: 0 -2px;
     background-color: #3e912a;
-    box-shadow: 0 4px 10px rgb(8, 8, 148);
-    transition: background-color 0.3s linear, box-shadow 0.3s linear;
+    box-shadow: 0 5px 10px rgb(8, 8, 148);
+    transition: translate 0.3s ease-in, background-color 0.3s ease-in, box-shadow 0.3s ease-in;
 }
 /* Fix 7-8: Focus sui campi input */
 input:focus,
 select:focus {
     border: 2px solid rgb(8, 8, 148);
-    box-shadow: 0 2px 10px rgb(8, 8, 148);
-    transition: border 0.3s linear, box-shadow 0.3s linear;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    transition: border 0.3s ease-in, box-shadow 0.3s ease-in;
 }
 
 /* Progress Bar */
@@ -252,6 +255,18 @@ select:focus {
 	border-radius: 5px;
 	overflow: hidden;
 	margin: 15px 0;
+    position: relative;
+}
+
+/* Fix 10: Percentuale nella barra di progresso */
+.progress-fill::after {
+    content: '65%';
+    color: white;
+    font-size: 10px;
+    font-weight: 600;
+    position: absolute;
+    right: 0;
+    line-height: 10px;
 }
 
 .progress-fill {
