--- a/css/solutions.css
+++ b/css/solutions.css
@@ -179,9 +179,11 @@ article:nth-of-type(2) {
 /* Fix 6: Icona fulmine negli esercizi pari */
 .exercise-item:nth-of-type(even) .exercise-name::before {
     content: '⚡';
+	font-size: 10px;
     display: inline-block;
-    font-size: 10px;
-    padding-right: 5px;
+	position: relative;
+	top: -3px;
+    right: 3px;
 }
 
 /* Goals Section */
@@ -230,14 +232,16 @@ article:nth-of-type(2) {
     translate: 0 -2px;
     background-color: #3e912a;
     box-shadow: 0 5px 10px rgb(8, 8, 148);
-    transition: translate 0.3s ease-in, background-color 0.3s ease-in, box-shadow 0.3s ease-in;
+    background-color 0.3s ease-in
+	transition: translate 0.5s ease-in, box-shadow 0.5s ease-in;
 }
+
 /* Fix 7-8: Focus sui campi input */
 input:focus,
 select:focus {
     border: 2px solid rgb(8, 8, 148);
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
-    transition: border 0.3s ease-in, box-shadow 0.3s ease-in;
+    transition: border 0.1s linear, box-shadow 0.1s linear;
 }
 
 /* Progress Bar */
@@ -256,26 +260,26 @@ select:focus {
 	border-radius: 5px;
 	overflow: hidden;
 	margin: 15px 0;
-    position: relative;
 }
 
 /* Fix 10: Percentuale nella barra di progresso */
-.progress-fill::after {
-    content: '65%';
-    color: white;
-    font-size: 10px;
-    font-weight: 600;
-    position: absolute;
-    right: 0;
-    line-height: 10px;
-}
-
 .progress-fill {
 	height: 100%;
 	background: linear-gradient(90deg, #667eea 0%, #764ba2 100%);
 	width: 65%;
 	border-radius: 5px;
 	position: relative;
+}
+
+.progress-fill::after {
+    content: '65%';
+    color: white;
+    font-size: 10px;
+    font-weight: 600;
+    position: absolute;
+    top: -3px;
+    right: 0;
+
 }
 
 .progress-text {
@@ -358,7 +362,6 @@ select:focus {
     bottom: 0px;
     right: 100px;
 }
-
 
 /* Spacer per la navigation fissa */
 .bottom-spacer {
